# woodworking

./: .gitignore  README.md  index.html  pyproject.toml
assets/: index-BZt8G4OK.js  index-BgYD8JYg.js  index-CeKPM7vI.js  index-D0UtFt0o.css  index-Dv6dwCn6.css
cadbuildr/woodworking/: interfaces.py  joints.py  sites.py
cadbuildr_projects/woodworking/: __init__.py  beam.py  specs.py
github-io/: .env.example  .env.production  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
github-io/src/: examples.json  main.tsx  package.json  styles.css  wheels.ts
local-wheels/: cadbuildr_foundation-0.2.12-py3-none-any.whl  cadbuildr_projects_woodworking-0.1.0-py3-none-any.whl
tests/: test_demo_examples.py  test_interfaces.py  test_more_wood_joints.py  test_wood_joints.py
