[project]
name = "cadbuildr-projects-woodworking"
version = "0.1.0"
description = "Wood joinery one-liners (mortise & tenon, laps...) built on CADbuildr foundation anchors + joints"
readme = "README.md"
# The workspace lock resolves with a 3.12 floor (uv.lock requires-python);
# declaring it here keeps `uv lock` reproducible.
requires-python = ">=3.12,<4.0.0"
authors = [
    {name = "CADbuildr Team"},
]
dependencies = [
    "cadbuildr-foundation>=0.2.12,<0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.cadbuildr.dependencies]
cadbuildr-foundation = "^0.2.12"

[tool.hatch.build.targets.wheel]
packages = [
    "cadbuildr_projects",
]


[build-system]
requires = [
    "hatchling>=1.27.0",
]
build-backend = "hatchling.build"
