[project]
name = "cadbuildr-woodworking"
version = "0.1.0"
description = "Wood joinery one-liners (mortise & tenon, laps...) built on CADbuildr foundation anchors + joints"
readme = "README.md"
# Published wheel must install everywhere the platform runs Python:
# the cloud sandbox venv is Debian bookworm 3.11, Pyodide is 3.12+ —
# match foundation's floor.
requires-python = ">=3.10.0,<4.0.0"
authors = [
    {name = "CADbuildr Team"},
]
dependencies = [
    "cadbuildr-foundation>=0.2.12,<0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.cadbuildr.dependencies]
cadbuildr-foundation = "^0.2.12"

[tool.hatch.build.targets.wheel]
packages = [
    "cadbuildr",
]

[tool.uv.sources]
cadbuildr-foundation = {workspace = true}

[build-system]
requires = [
    "hatchling>=1.27.0",
]
build-backend = "hatchling.build"
